# scRNA-seq

./: .gitignore  README.md  TCGA_bulk_RNA_seq-kopi.R  data.md  pipeline.py  pyproject.toml
.github/workflows/: python-wf.yml  wf.yml
cibersortx-plots/: plot.py
