[tool.poetry]
name = "scrna-seq"
version = "0.1.0"
description = "single-cell RNA sequencing analysis"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scanpy = "^1.9.3"
# pandas = "^2.0.3"
# pytest = "^7.4.0"
# pytest-cov = "^4.1.0"
# flake8 = "^6.1.0"
ruff = "^0.0.282"
mypy = "^1.4.1"
wily = "^1.24.2"
# sphinx = "^7.1.1"
# black = "^23.7.0"
# pre-commit = "^3.3.3"
# isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
